# questverse-monorepo

./: .gitignore  README.md
.github/workflows/: deploy-prod-widgets.yml  deploy-widgets-mainnet.yml  deploy-widgets.yml
contracts/block-quests/: package.json
contracts/block-quests/contract/: Cargo.toml  README.md
contracts/block-quests/contract/src/: errors.rs  lib.rs  types.rs
contracts/quests-v1/: package-lock.json  package.json
contracts/quests-v1/contract/src/: lib.rs
quest-indexer-templates/: output.json  package.json
quest-indexer-templates/indexers/astrodao.near/: config.json
quest-indexer-templates/indexers/devgogs.near/: config.json
quest-indexer-templates/indexers/mintbase/: config.json
quest-indexer-templates/indexers/near-horizon/: config.json
quest-indexer-templates/indexers/nft.genadrop.near/: config.json
quest-indexer-templates/indexers/social.near/: config.json
quest-indexer-templates/scripts/: convert_to_json.js
quest-indexer/runner/: README.md
quest-verse-contract/: .gitignore  ava.config.cjs  package-lock.json  package.json
quest-verse-contract/contract/: Cargo.toml  build.sh  deploy.sh
quest-verse-contract/contract/neardev/: dev-account  dev-account.env
quest-verse-contract/contract/src/: constants.rs  external.rs  keypom_ext.rs  lib.rs  quest.rs  storage.rs  types.rs  utils.rs  view.rs
quest-verse-contract/contract/src/keypom_models/: drop_model.rs  fc_model.rs  ft_model.rs  json_types.rs  mod.rs  nft_model.rs  simple_model.rs
quest-verse-contract/contract/tests/: integration.rs
quest-verse-contract/integration-tests/: package-lock.json  package.json
quest-verse-contract/integration-tests/src/: quest-creation.ava.ts
questverse-widgets/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  replacements.prod.json
questverse-widgets/apps/QuestVerse/: bos.config.json
questverse-widgets/src/QuestsVerse/: app.jsx
tx-signing-service/: .env  .env.test  Cargo.toml  README.md
tx-signing-service/src/: graphql_service.rs  internal.rs  main.rs
widgets/: replacement.mainnet.json
widgets/src/: CreateQuestPage.jsx  ManageQuestsPage.jsx  OngoingQuests.jsx  QuestDetails.jsx  QuestProtocolStats.jsx  QuestRewardRedemptionPage.jsx  QuestsDashboard.jsx  QuestsHomePage.jsx  QuestsLeaderboard.jsx
(+88 files in other folders)
