[package]
name = "near_hackathon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.6"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
near-crypto = "0.17.0"
near-primitives = "0.17.0"
