[package]
name = "near_hackathon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.6"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full", "test-util"] }
near-primitives = "0.17.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde_json = "1.0.91"
thiserror = "1.0.50"
dotenv = "0.15.0"
ed25519-dalek = "1"
rand = "^0.7"
base64 = "0.21.5"
borsh = "0.9"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
